ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress_name
  annotaions:
    kubernetes.io/ingress.class: "nginx | traefik | envoy" #集群上部署了多个ingress控制器，必须制定控制器类型
spec:
  tls:
  - host:
    - www.example.com
    secretName: secret_name
  rules:
  - host: www.example.com
    http:
      paths:
      - backend:
          serviceName: svc_name
          servicePort: svc_port
